--- a/studio/index.html
+++ b/studio/index.html
@@ -82,7 +82,7 @@
 </head>
 <body>
   <header>
-    <img src="./assets/note-icon.svg" alt="Note Icon">
+    <img src="../assets/note-icon.svg" alt="Note Icon">
     <h1>Song Studio - Suno</h1>
   </header>
   <div class="container">
