--- a/studio/index.html
+++ b/studio/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Song Studio - Suno</title>
+  <title>Song Studio - Styler</title>
   <style>
     /* General reset */
     body {
