--- a/studio/index.html
+++ b/studio/index.html
@@ -83,7 +83,7 @@
 <body>
   <header>
     <img src="../assets/note-gradient-icon.svg" alt="Note Icon">
-    <h1>Song Studio - Suno</h1>
+    <h1>Song Studio - Styler</h1>
   </header>
   <div class="container">
     <input type="text" id="prompt-input" placeholder="Enter your prompt here">
