--- a/studio/index.html
+++ b/studio/index.html
@@ -199,7 +199,7 @@
       }
     }
 
-    async function queryDescriptors(embedding, topN = 5, bottomN = 5) {
+    async function queryDescriptors(embedding, topN, bottomN) {
       const scores = await dotProductTensor(embedding);
       // Keep track of tensors to dispose
       const tensorsToDispose = [scores];
@@ -247,9 +247,10 @@
     }
 
     // Build descriptors based on cosine similarity (here, dot product is used)
-    async function buildCustomDescriptor(text, topN = 5, bottomN = 5) {
+    async function buildCustomDescriptor(text, topN = 10, bottomN = 5) {
       const embedding = await getEmbedding(text);
       const { tops, bottoms } = await queryDescriptors(embedding, topN, bottomN);
+      embedding.dispose();
       return {
         include: buildDescriptorStrings(tops),
         exclude: buildDescriptorStrings(bottoms),
